# eule

./: .bumpversion.cfg  .coveragerc  .flake8  .pre-commit-config.yaml  .scrutinizer.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  README_INTERVALSET.md  SECURITY.md  circle.yml  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: check-lint.yaml  ci.yml  link-documents.yaml  python-package.yaml  release.yaml  release.yml  safety.yml  test-coverage.yaml  test-coverage.yml  test.yml  upload-test.yml
docs/: COVERAGE_REPORT.md  EXTENSIBILITY_README.md  FINAL_STATUS.md  HYBRID_EXAMPLES_GUIDE.md  INTEGRATION_OPPORTUNITIES.md  INTERVALSET_ANALYSIS_SESSION.md  INTERVALSET_COMPATIBILITY.md  INTERVAL_SETS_ISSUE.md  INTERVAL_SETS_LIMITATIONS.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROTOCOL_SPECIFICATION.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  SETLIKE_REQUIREMENTS.md  UX_COMPARISON.md  authors.rst  conf.py  contributing.rst  eule.rst  example.rst  history.rst  index.rst  installation.rst  interval_sets_integration_analysis.md  make.bat  modules.rst  readme.rst  requirements.txt  usage.rst
docs/design/: AUTOMATIC_ADAPTATION_DESIGN.md  IMPLEMENTATION_SUMMARY.md
docs/info/: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst
docs/library-info/: AUTHORS.rst  CONTRIBUTING.rst  EXAMPLE.rst  HISTORY.md  HISTORY.rst  README.rst
docs/reports/: COMPLETE_MISSION_SUMMARY.md  COVERAGE_100_ACHIEVEMENT.md  COVERAGE_GAPS_ANALYSIS.md  FINAL_COVERAGE_REPORT.md  FINAL_COVERAGE_STATUS.md
eule/: __init__.py  adaptation.py  benchmark.py  cli.py  clustering.py  core.py  eule.ipynb  eule.py  operations.py  protocols.py  registry.py  types.py  utils.py  validators.py
eule/adapters/: __init__.py  box_sets.py  builtin.py  interval_sets.py  shapely_geom.py
eule/examples/: example.py
examples/: README.md  basic_operations.py  case_3d_clash_detection.py  case_astronomy.py  case_audio_mixing.py  case_genomics.py  case_network_security.py  case_nlp_stylometry.py  case_quality_analysis.py  case_scatter_hulls.py  case_scheduling.py  case_security_audit.py  case_temporal_events.py  clustering.py  custom_protocol_infinite_sets.py  example.ipynb  example.py  hybrid_customer_segmentation.py  hybrid_quality_analysis.py  interval_sets_compatibility_demo.py  interval_sets_example.py  interval_sets_working_example.py  intervals.py  set_boundaries.py  spatial.py  visualize_genomics.py  visualize_linkedin_post.py  visualize_spatial.py
scripts/: clean_packages.py  prepare_env.sh  publish_pkg.sh  run-tests.sh  run_tests.sh
src/: __init__.py  eule.py  euler_diagram.ipynb  utils.py
src/eule/: __init__.py  eule.py  utils.py
src/tox_eule/: __init__.py  eule.py  plugin.py
tests/: __init__.py  conftest.py  fixtures.py  test_adaptation.py  test_adaptation_benchmark.py.skip  test_benchmark.py  test_clustering.py  test_clustering_coverage.py  test_clustering_edge_cases.py  test_complete_coverage.py  test_core.py  test_coverage_gaps.py  test_edge_cases.py  test_euler.py  test_final_coverage_push.py  test_final_remaining_lines.py  test_interval_sets_integration.py  test_laser_focused.py  test_operations.py  test_protocols.py  test_registry.py  test_ultra_targeted.py  test_utils.py  test_validators.py
