[tool.poetry]
name = "eule"
version = "0.2.9"
description = "Euler diagrams in python"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "eule"}]
homepage = "https://pypi.org/project/eule/"
repository = "https://github.com/quivero/eule"
keywords = ["euler-diagram", "sets"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^6.0.0"
sphinxcontrib-websupport = "^1.2.4"
sphinxcontrib-serializinghtml = "^1.1.5"
ruff = "^0.0.217"
pre-commit = "^2.20.0"
black = "^22.12.0"
coverage = "^7.0"
tox = "^4.0.19"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-watch = "^4.2.0"
pylint = "^2.15.9"
wheel = "^0.38.4"
watchdog = "^2.2.0"
isort = "^5.11.4"
mypy = "^0.991"
types-mock = "^4.0.15.2"
pygments = "^2.14.0"
docutils = "^0.19"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
