[project]
name = "eule"
version = "1.3.1"
description = "Euler diagrams in python"
authors = [{ name = "Bruno Peixoto", email = "brunolnetto@gmail.com" }]
maintainers = [{ name = "Bruno Peixoto", email = "brunolnetto@gmail.com" }]
requires-python = ">=3.9"
license = { text = "MIT License" }
readme = "README.md"
packages = [{include = "eule"}]
keywords = ["euler-diagram", "sets"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
dependencies = [ "numpy>2.0.0" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
homepage = "https://pypi.org/project/eule/"
repository = "https://github.com/trouchet/eule"

[tool.hatch.build.targets.wheel]
packages = ["eule/"]

[project.optional-dependencies]
build = [
    "mypy>=0.991",
    "wheel>=0.38.4",
]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-watch>=4.2.0",
    "pytest-timer>=1.0.0",
    "coverage>=7.0",
    "watchdog>=3.0.0",
    "types-mock>=4.0.15.2"
]
lint=[
    "black>=22.12,<25.0",
    "pylint>=2.15.9",
    "pre-commit>=2.20.0",
    "isort>=5.11.4",
    "ruff>=0.0.217",
]
docs=[
    "sphinx>=6.0.0",
    "toml>=0.10.2",
    "types-toml>=0.10.8.5",
    "docutils>=0.18.1",
    "sphinx-rtd-theme>=1.2.0",
    "sphinxcontrib-websupport>=1.2.4",
    "sphinxcontrib-serializinghtml>=1.1.5"
]

[tool.coverage.run]
branch = true
relative_files = true
data_file = ".coveragerc"
source = ["eule"]
omit = ["*examples*"]

[tool.ruff]
line-length = 100

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "auto_examples",
    "venv"
]

